--- a/src/player.html
+++ b/src/player.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/resolution_manager.css">
     <link rel="stylesheet" href="css/cache_manager.css">
     <link rel="stylesheet" href="css/scte_manager.css">
-    <link rel="stylesheet" href="css/config.css">
+    <!-- <link rel="stylesheet" href="css/config.css"> -->
     <link rel="stylesheet" href="css/qoe.css">
+    <link rel="stylesheet" href="css/statusbar.css">
 </head>
 
 <body>
@@ -79,7 +80,7 @@
                 <div class="tab-nav">
                     <button class="tab-button active" data-tab="inspect">Inspect</button>
                     <button class="tab-button" data-tab="qoe">Metrics</button>
-                    <button class="tab-button" data-tab="ai">AI</button>
+                    <!-- <button class="tab-button" data-tab="ai">AI</button> -->
                 </div>
 
                 <div class="tab-content">
@@ -254,10 +255,10 @@
     <script defer src="js/ui/resolution_manager.js"></script>
     <script defer src="js/ui/segment_tags.js"></script>
     <script defer src="js/ui/manifest_ui.js"></script>
-    <script defer src="js/ui/config_ui.js"></script>
+    <!-- removed config_ui.js for now -->
     <script defer src="js/ui/metrics_ui.js"></script>
     <script defer src="js/core/player_loader.js"></script>
-
+    <script defer src="js/ui/statusbar_manager.js"></script>
 </body>
 
 </html>
