chore: scte engine improvements

--- a/src/player.html
+++ b/src/player.html
@@ -249,7 +249,7 @@
     <!-- Load Scripts -->
     <script defer src="js/lib/hls.min.js"></script>
     <script defer src="js/lib/scte35.bundle.min.js"></script>
-    <script defer src="js/core/scte35_parse.js"></script> 
+    <script defer src="js/core/scte_parser.js"></script> 
     <script defer src="js/core/hls_parser.js"></script>
     <script defer src="js/ui/player_ui.js"></script>
     <script defer src="js/ui/scte_manager.js"></script>
