--- a/src/player.html
+++ b/src/player.html
@@ -256,6 +256,7 @@
     <script defer src="js/ui/cache_manager.js"></script>
     <script defer src="js/ui/resolution_manager.js"></script>
     <script defer src="js/ui/segment_tags.js"></script>
+    <script defer src="js/ui/adblock_ui.js"></script>
     <script defer src="js/ui/manifest_ui.js"></script>
     <!-- removed config_ui.js for now -->
     <script defer src="js/ui/metrics_ui.js"></script>
