chore: completed the jwt drm component and improved api

--- a/src/player.html
+++ b/src/player.html
@@ -251,7 +251,7 @@
     <!-- Load Scripts -->
     <script defer src="js/lib/hls.min.js"></script>
     <script defer src="js/lib/scte35.bundle.min.js"></script>
-    <script defer src="js/lib/jwt-decode.min.js"></script>
+    <script defer src="js/lib/jwt_decode.bundle.min.js"></script>
     <script defer src="js/core/scte_parser.js"></script> 
     <script defer src="js/core/hls_parser.js"></script>
     <script defer src="js/ui/player_ui.js"></script>
