--- a/src/player.html
+++ b/src/player.html
@@ -248,40 +248,52 @@
                             <div class="qoe-metrics-container">
                                 <div class="agent-metric-row">
                                     <p class="agent-metric-intro">Select options for your Agent to
-                                        complete, and adjust the execution time. Click Start to begin.</p>
+                                        complete, and adjust the execution time. Click Start Analysis to begin.</p>
                                 </div>
                             </div>
 
                             <div class="agent-metric-task-list">
                                 <div class="agent-metric-task-item">
-                                    <input type="checkbox" id="agentTask1" name="agentTask1"
-                                        value="analyzePlaybackErrors">
-                                    <label for="agentTask1" class="agent-metric-task-label">
-                                        <span class="agent-metric-task-title">Analyze Playback Errors</span>
-                                        <span class="agent-metric-task-description">Monitor playback stability for any
-                                            errors.</span>
+                                    <label class="agent-toggle-switch">
+                                        <input type="checkbox" id="agentTask1" name="agentTask1" value="analyzePlaybackErrors">
+                                        <div class="toggle-switch__track">
+                                            <div class="toggle-switch__knob"></div>
+                                        </div>
+                                        <div class="toggle-switch__body-container">
+                                            <span class="agent-metric-task-title">Analyze Playback Errors</span>
+                                            <span class="agent-metric-task-description">Monitor playback stability for any errors.</span>
+                                        </div>
                                     </label>
                                 </div>
 
                                 <div class="agent-metric-task-item">
-                                    <input type="checkbox" id="agentTask2" name="agentTask2"
-                                        value="assessAbrPerformance">
-                                    <label for="agentTask2" class="agent-metric-task-label">
-                                        <span class="agent-metric-task-title">ABR Performance</span>
-                                        <span class="agent-metric-task-description">Monitor ABR performance and switch
-                                            count.</span>
+                                    <label class="agent-toggle-switch">
+                                        <input type="checkbox" id="agentTask2" name="agentTask2" value="assessAbrPerformance">
+                                        <div class="toggle-switch__track">
+                                            <div class="toggle-switch__knob"></div>
+                                        </div>
+                                        <div class="toggle-switch__body-container">
+                                            <span class="agent-metric-task-title">ABR Performance</span>
+                                            <span class="agent-metric-task-description">Monitor ABR performance and switch count.</span>
+                                        </div>
                                     </label>
-                                </div>
+                                </div>                                
 
                                 <div class="agent-metric-task-item">
-                                    <input type="checkbox" id="agentTask3" name="agentTask3"
-                                        value="evaluateCacheEffectiveness">
-                                    <label for="agentTask3" class="agent-metric-task-label">
-                                        <span class="agent-metric-task-title">Evaluate Cache</span>
-                                        <span class="agent-metric-task-description">Analyze headers for cache
-                                            hits/misses & TTL.</span>
+                                    <label class="agent-toggle-switch">
+                                        <input type="checkbox" id="agentTask3" name="agentTask3" value="evaluateCacheEffectiveness">
+                                        <div class="toggle-switch__track">
+                                            <div class="toggle-switch__knob"></div>
+                                        </div>
+                                        <div class="toggle-switch__body-container">
+                                            <span class="agent-metric-task-title">Evaluate Cache</span>
+                                            <span class="agent-metric-task-description">Analyze headers for cache hits/misses & TTL.</span>
+                                        </div>
                                     </label>
-                                </div>
+                                </div>                                
+
+
+
                             </div>
                         </div>
 
